# minimal-design-patterns

./: CMakeLists.txt  README.md
